--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <header>
       <div>
-        <button class="material-symbols-outlined footer-icon header-icon-pd">notifications</button>
-        <button class="material-symbols-outlined footer-icon header-icon-pd">favorite</button>
+        <span class="material-symbols-outlined footer-icon header-icon-pd">notifications</span>
+        <span class="material-symbols-outlined footer-icon header-icon-pd">favorite</span>
       </div>
         <span>Ne Zbritje!</span>
-        <button class="material-symbols-outlined footer-icon header-icon-pd">add</button>
+        <span class="material-symbols-outlined footer-icon header-icon-pd">add</span>
     </header>
 
     <!--   End of Header  -->
