--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--  Header  -->
 
     <header>
-      <div>
+      <div style="display: flex;align-items: center;column-gap: 10px;">
         <span class="material-symbols-outlined footer-icon header-icon-pd">notifications</span>
         <span class="material-symbols-outlined footer-icon header-icon-pd">favorite</span>
       </div>
