--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <header>
       <span>Ne Zbritje!</span>
       <div style="display: flex;align-items: center;column-gap: 15px;">
-        <span class="material-symbols-outlined footer-icon header-icon-pd">favorite</span>
-        <span class="material-symbols-outlined footer-icon header-icon-pd">add</span>
+        <button><span class="material-symbols-outlined footer-icon header-icon-pd">favorite</span></button>
+        <button><span class="material-symbols-outlined footer-icon header-icon-pd">add_circle</span></button>
       </div>
     </header>
 
