--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
     <!-- Footer Section  -->
 <footer>
   <nav>
-      <button class="icon-text-button selected">
+      <button class="selected">
         <span class="material-symbols-outlined footer-icon">home</span>
           <span class="footer-btn-text">Ballina</span>
       </button>
-      <button class="icon-text-button">
+      <button>
         <span class="material-symbols-outlined footer-icon">category</span>
           <span class="footer-btn-text">Kategorit</span>
       </button>
-      <button class="icon-text-button">
+      <button>
         <span class="material-symbols-outlined footer-icon">shopping_cart</span>
           <span class="footer-btn-text">Shporta</span>
       </button>
-      <button class="icon-text-button">
+      <button>
         <span class="material-symbols-outlined footer-icon">menu</span>
           <span class="footer-btn-text">Menu</span>
       </button>
