--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
   <script>
-    var buttons = document.querySelectorAll('.icon-text-button');
+    var buttons = document.querySelectorAll('button');
 
     for (var i = 0; i < buttons.length; i++) {
       buttons[i].addEventListener('click', function() {
