--- a/index.html
+++ b/index.html
@@ -47,14 +47,25 @@
     <!--  Main Section  -->
 
     <main>
-      <section>
-
+       <!--  Navigation Store  Section  -->
+      <section class="navSection">
+        <div class="search-container">
+          <input type="search" placeholder="Search Here...">
+        </div>
+        <button><span class="material-symbols-outlined footer-icon header-icon-pd">filter_list</span></button>
       </section>
+      <!--  End of Navigation Store  Section  -->
+
+
+
+
+
+
+
+
     </main>
 
     <!-- End of Main Section  -->
-
-    <!-- Footer Section  -->
 
     <!-- Footer Section  -->
 <footer>
