--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         </div>
         <button><span class="material-symbols-outlined footer-icon header-icon-pd">filter_list</span></button>
       </section>
+      <section class="main-productGrid">
+        
+      </section>
       <!--  End of Navigation Store  Section  -->
 
 
