--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <header>
       <span>Ne Zbritje!</span>
       <div style="display: flex;align-items: center;column-gap: 15px;">
-        <button><span class="material-symbols-outlined footer-icon header-icon-pd">favorite</span></button>
-        <button><span class="material-symbols-outlined footer-icon header-icon-pd">add_circle</span></button>
+        <button><span class="material-symbols-outlined footer-icon btn-pad">favorite</span></button>
+        <button><span class="material-symbols-outlined footer-icon btn-pad">add_circle</span></button>
       </div>
     </header>
 
@@ -52,7 +52,7 @@
         <div class="search-container">
           <input type="search" placeholder="Search Here...">
         </div>
-        <button><span class="material-symbols-outlined footer-icon header-icon-pd">filter_list</span></button>
+        <button><span class="material-symbols-outlined footer-icon btn-pad">filter_list</span></button>
       </section>
       <section class="main-productGrid">
         
@@ -73,19 +73,19 @@
     <!-- Footer Section  -->
   <footer>
     <nav>
-        <button class="selected">
+        <button class="selected btn-pad">
           <span class="material-symbols-outlined footer-icon">home</span>
             <span class="footer-btn-text">Ballina</span>
         </button>
-        <button>
+        <button class="btn-pad">
           <span class="material-symbols-outlined footer-icon">category</span>
             <span class="footer-btn-text">Kategorit</span>
         </button>
-        <button>
+        <button class="btn-pad">
           <span class="material-symbols-outlined footer-icon">shopping_cart</span>
             <span class="footer-btn-text">Shporta</span>
         </button>
-        <button>
+        <button class="btn-pad">
           <span class="material-symbols-outlined footer-icon">menu</span>
             <span class="footer-btn-text">Menu</span>
         </button>
@@ -134,6 +134,6 @@
 
 
 
-    <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/main.js"></script>
   </body>
 </html>
