--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
         <div class="cat-profile">
           <img src="/images/viva fresh.jpg" alt="">
         </div>
+        <div class="cat-profile">
+          <img src="/images/etc.png" alt="">
+        </div>
+        <div class="cat-profile">
+          <img src="/images/meridian.jpg" alt="">
+        </div>
+        <div class="cat-profile">
+          <img src="/images/spar kosova.jpg" alt="">
+        </div>
+        <div class="cat-profile">
+          <img src="/images/viva fresh.jpg" alt="">
+        </div>
+        <div class="cat-profile">
+          <img src="/images/etc.png" alt="">
+        </div>
+        <div class="cat-profile">
+          <img src="/images/meridian.jpg" alt="">
+        </div>
+        <div class="cat-profile">
+          <img src="/images/spar kosova.jpg" alt="">
+        </div>
+        <div class="cat-profile">
+          <img src="/images/viva fresh.jpg" alt="">
+        </div>
         
 
       </section>
