--- a/index.html
+++ b/index.html
@@ -55,60 +55,62 @@
         <button><span class="material-symbols-outlined footer-icon btn-pad">filter_list</span></button>
       </section>
 
-      <section class="cat-container">
-        <div class="cat-profile">
-          <img src="/images/emona.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/etc.png" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/meridian.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/spar kosova.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/viva fresh.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/emona.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/etc.png" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/meridian.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/spar kosova.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/viva fresh.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/etc.png" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/meridian.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/spar kosova.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/viva fresh.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/etc.png" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/meridian.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/spar kosova.jpg" alt="">
-        </div>
-        <div class="cat-profile">
-          <img src="/images/viva fresh.jpg" alt="">
+      <section class="cat-wrap">
+        <div class="cat-container">
+          <div class="cat-profile">
+            <img src="/images/emona.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/etc.png" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/meridian.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/spar kosova.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/viva fresh.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/emona.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/etc.png" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/meridian.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/spar kosova.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/viva fresh.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/etc.png" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/meridian.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/spar kosova.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/viva fresh.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/etc.png" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/meridian.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/spar kosova.jpg" alt="">
+          </div>
+          <div class="cat-profile">
+            <img src="/images/viva fresh.jpg" alt="">
+          </div>
         </div>
         
 
