--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 
         <div class="product-card">
           <div class="prod-img-box">
-            <img src="/images/1.png" alt="">
+            <img class="originFlag" src="/icons/greece.png" alt="">
+            <img class="productImage" src="/images/1.png" alt="">
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -138,7 +139,8 @@
 
         <div class="product-card">
           <div class="prod-img-box">
-            <img src="/images/2.png" alt="">
+            <img class="originFlag" src="/icons/bos.jpg" alt="">
+            <img class="productImage" src="/images/2.png" alt="">
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -152,7 +154,8 @@
 
         <div class="product-card">
           <div class="prod-img-box">
-            <img src="/images/3.png" alt="">
+            <img class="originFlag" src="/icons/fra.jpg" alt="">
+            <img class="productImage" src="/images/3.png" alt="">
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -166,7 +169,8 @@
 
         <div class="product-card">
           <div class="prod-img-box">
-            <img src="/images/4.png" alt="">
+            <img class="originFlag" src="/icons/slo.jpg" alt="">
+            <img class="productImage" src="/images/4.png" alt="">
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -180,7 +184,8 @@
 
         <div class="product-card">
           <div class="prod-img-box">
-            <img src="/images/5.png" alt="">
+            <img class="originFlag" src="/icons/ger.jpg" alt="">
+            <img class="productImage" src="/images/5.png" alt="">
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -194,7 +199,8 @@
 
         <div class="product-card">
           <div class="prod-img-box">
-            <img src="/images/6.png" alt="">
+            <img class="originFlag" src="/icons/ger.jpg" alt="">
+            <img class="productImage" src="/images/6.png" alt="">
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
