--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <input type="text" id="quantity" value="1">
               <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
             </div>
-            <button><span class="material-symbols-outlined footer-icon">shopping_cart</span></button>
+            <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
         </div>
 
