--- a/index.html
+++ b/index.html
@@ -158,6 +158,14 @@
               <strike>5.20</strike>
             </div>
           </div>
+          <div class="row-center">
+            <div class="quantity-control">
+              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <input type="text" id="quantity" value="1">
+              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+            </div>
+            <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
+          </div>
         </div>
 
         <div class="product-card">
@@ -172,6 +180,14 @@
               <span>€2.18</span>
               <strike>3.20</strike>
             </div>
+          </div>
+          <div class="row-center">
+            <div class="quantity-control">
+              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <input type="text" id="quantity" value="1">
+              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+            </div>
+            <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
         </div>
 
@@ -188,6 +204,14 @@
               <strike>5.20</strike>
             </div>
           </div>
+          <div class="row-center">
+            <div class="quantity-control">
+              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <input type="text" id="quantity" value="1">
+              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+            </div>
+            <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
+          </div>
         </div>
 
         <div class="product-card">
@@ -203,6 +227,14 @@
               <strike>5.20</strike>
             </div>
           </div>
+          <div class="row-center">
+            <div class="quantity-control">
+              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <input type="text" id="quantity" value="1">
+              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+            </div>
+            <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
+          </div>
         </div>
 
         <div class="product-card">
@@ -217,6 +249,14 @@
               <span>€2.39</span>
               <strike>4.20</strike>
             </div>
+          </div>
+          <div class="row-center">
+            <div class="quantity-control">
+              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <input type="text" id="quantity" value="1">
+              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+            </div>
+            <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
         </div>
         
