--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
           </div>
           <div class="row-center">
             <div class="quantity-control">
-              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
               <input type="text" id="quantity" value="1">
-              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
             </div>
             <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
@@ -160,9 +160,9 @@
           </div>
           <div class="row-center">
             <div class="quantity-control">
-              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
               <input type="text" id="quantity" value="1">
-              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
             </div>
             <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
@@ -183,9 +183,9 @@
           </div>
           <div class="row-center">
             <div class="quantity-control">
-              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
               <input type="text" id="quantity" value="1">
-              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
             </div>
             <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
@@ -206,9 +206,9 @@
           </div>
           <div class="row-center">
             <div class="quantity-control">
-              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
               <input type="text" id="quantity" value="1">
-              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
             </div>
             <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
@@ -229,9 +229,9 @@
           </div>
           <div class="row-center">
             <div class="quantity-control">
-              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
               <input type="text" id="quantity" value="1">
-              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
             </div>
             <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
@@ -252,9 +252,9 @@
           </div>
           <div class="row-center">
             <div class="quantity-control">
-              <button class="quantity-btn" onclick="decrement()"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">remove</span></button>
               <input type="text" id="quantity" value="1">
-              <button class="quantity-btn" onclick="increment()"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
+              <button class="quantity-btn"><span class="material-symbols-outlined footer-icon nbck">add</span></button>
             </div>
             <button><span class="material-symbols-outlined footer-icon addCartBtn">shopping_cart</span></button>
           </div>
@@ -337,24 +337,6 @@
       });
     }
   </script>
-
-  <script>
-    function increment() {
-  var value = parseInt(document.getElementById('quantity').value, 10);
-  value = isNaN(value) ? 0 : value;
-  value++;
-  document.getElementById('quantity').value = value;
-}
-
-function decrement() {
-  var value = parseInt(document.getElementById('quantity').value, 10);
-  value = isNaN(value) ? 0 : value;
-  value < 1 ? value = 1 : '';
-  value--;
-  document.getElementById('quantity').value = value;
-}
-  </script>
-
 
 
 
