--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
           <div class="prod-img-box">
             <img class="originFlag" src="/icons/greece.png" alt="">
             <img class="productImage" src="/images/1.png" alt="">
+            <div class="discount-label">-14%</div>
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -149,6 +150,7 @@
           <div class="prod-img-box">
             <img class="originFlag" src="/icons/bos.jpg" alt="">
             <img class="productImage" src="/images/2.png" alt="">
+            <div class="discount-label">-3%</div>
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -172,6 +174,7 @@
           <div class="prod-img-box">
             <img class="originFlag" src="/icons/fra.jpg" alt="">
             <img class="productImage" src="/images/3.png" alt="">
+            <div class="discount-label">-25%</div>
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -195,6 +198,7 @@
           <div class="prod-img-box">
             <img class="originFlag" src="/icons/slo.jpg" alt="">
             <img class="productImage" src="/images/4.png" alt="">
+            <div class="discount-label">-13%</div>
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -218,6 +222,7 @@
           <div class="prod-img-box">
             <img class="originFlag" src="/icons/ger.jpg" alt="">
             <img class="productImage" src="/images/5.png" alt="">
+            <div class="discount-label">-52%</div>
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
@@ -241,6 +246,7 @@
           <div class="prod-img-box">
             <img class="originFlag" src="/icons/ger.jpg" alt="">
             <img class="productImage" src="/images/6.png" alt="">
+            <div class="discount-label">-20%</div>
           </div>
           <div class="product-info">
             <p>Deri me 25/05/1989</p>
