--- a/index.html
+++ b/index.html
@@ -140,11 +140,10 @@
             <button class="cart-btn">Add to Cart</button>
             <div class="quantity-controls">
               <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1">
+              <input type="number" class="quantity-input" value="1" readonly>
               <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
             </div>
           </div>
-          
         </div>
 
         <div class="product-card">
@@ -162,11 +161,11 @@
             </div>
           </div>
           <div class="cart-button">
-            <button id="add-to-cart" class="cart-btn">Add to Cart</button>
-            <div id="quantity-controls" class="quantity-controls">
-              <button id="decrease" class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" id="quantity" value="1" class="quantity-input">
-              <button id="increase" class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
             </div>
           </div>
         </div>
@@ -186,11 +185,11 @@
             </div>
           </div>
           <div class="cart-button">
-            <button id="add-to-cart" class="cart-btn">Add to Cart</button>
-            <div id="quantity-controls" class="quantity-controls">
-              <button id="decrease" class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" id="quantity" value="1" class="quantity-input">
-              <button id="increase" class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
             </div>
           </div>
         </div>
@@ -210,11 +209,11 @@
             </div>
           </div>
           <div class="cart-button">
-            <button id="add-to-cart" class="cart-btn">Add to Cart</button>
-            <div id="quantity-controls" class="quantity-controls">
-              <button id="decrease" class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" id="quantity" value="1" class="quantity-input">
-              <button id="increase" class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
             </div>
           </div>
         </div>
@@ -234,11 +233,11 @@
             </div>
           </div>
           <div class="cart-button">
-            <button id="add-to-cart" class="cart-btn">Add to Cart</button>
-            <div id="quantity-controls" class="quantity-controls">
-              <button id="decrease" class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" id="quantity" value="1" class="quantity-input">
-              <button id="increase" class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
             </div>
           </div>
         </div>
@@ -258,11 +257,155 @@
             </div>
           </div>
           <div class="cart-button">
-            <button id="add-to-cart" class="cart-btn">Add to Cart</button>
-            <div id="quantity-controls" class="quantity-controls">
-              <button id="decrease" class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" id="quantity" value="1" class="quantity-input">
-              <button id="increase" class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="prod-img-box">
+            <img class="originFlag" src="/icons/greece.png" alt="">
+            <img class="productImage" src="/images/1.png" alt="">
+            <div class="discount-label">-14%</div>
+          </div>
+          <div class="product-info">
+            <p>Deri me 25/05/1989</p>
+            <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
+            <div>
+              <span>€3.99</span>
+              <strike>9.20</strike>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="prod-img-box">
+            <img class="originFlag" src="/icons/bos.jpg" alt="">
+            <img class="productImage" src="/images/2.png" alt="">
+            <div class="discount-label">-3%</div>
+          </div>
+          <div class="product-info">
+            <p>Deri me 25/05/1989</p>
+            <h5>Olympus Lëng Multivitamin 12/1L</h5>
+            <div>
+              <span>€3.99</span>
+              <strike>5.20</strike>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="prod-img-box">
+            <img class="originFlag" src="/icons/fra.jpg" alt="">
+            <img class="productImage" src="/images/3.png" alt="">
+            <div class="discount-label">-25%</div>
+          </div>
+          <div class="product-info">
+            <p>Deri me 25/05/1989</p>
+            <h5>Gazi BBQ Grill & Pan djath 45% yndyrë 12/100gr</h5>
+            <div>
+              <span>€2.18</span>
+              <strike>3.20</strike>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="prod-img-box">
+            <img class="originFlag" src="/icons/slo.jpg" alt="">
+            <img class="productImage" src="/images/4.png" alt="">
+            <div class="discount-label">-13%</div>
+          </div>
+          <div class="product-info">
+            <p>Deri me 25/05/1989</p>
+            <h5>Virshlle Pule e tymosur, me djath 7/500gr</h5>
+            <div>
+              <span>€3.11</span>
+              <strike>5.20</strike>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="prod-img-box">
+            <img class="originFlag" src="/icons/ger.jpg" alt="">
+            <img class="productImage" src="/images/5.png" alt="">
+            <div class="discount-label">-52%</div>
+          </div>
+          <div class="product-info">
+            <p>Deri me 25/05/1989</p>
+            <h5>Djathë - Double Cream 9/400g</h5>
+            <div>
+              <span>€3.21</span>
+              <strike>5.20</strike>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
+            </div>
+          </div>
+        </div>
+
+        <div class="product-card">
+          <div class="prod-img-box">
+            <img class="originFlag" src="/icons/ger.jpg" alt="">
+            <img class="productImage" src="/images/6.png" alt="">
+            <div class="discount-label">-20%</div>
+          </div>
+          <div class="product-info">
+            <p>Deri me 25/05/1989</p>
+            <h5>Majonezë 10/500ml</h5>
+            <div>
+              <span>€2.39</span>
+              <strike>4.20</strike>
+            </div>
+          </div>
+          <div class="cart-button">
+            <button class="cart-btn">Add to Cart</button>
+            <div class="quantity-controls">
+              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
+              <input type="number" class="quantity-input" value="1" readonly>
+              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
             </div>
           </div>
         </div>
