--- a/index.html
+++ b/index.html
@@ -316,7 +316,9 @@
 
 
 
+<!---------------- Modal Structures Section ---------------->
 
+<!-- Product Modal Styling -->
 
 <div id="modalBackdrop"></div>
 
@@ -327,6 +329,17 @@
     <button id="closeModalBtn">Close</button>
   </div>
 </div>
+
+<!-- End of Product Modal Styling -->
+
+
+
+
+
+
+
+
+<!---------------- End of Modal Structures Section ---------------->
 
 
 
